--- a/style.css
+++ b/style.css
@@ -93,4 +93,16 @@ ol {
   line-height: 29px;
   color: #000000;
   margin-left: 54px; /* Espaço à esquerda da lista */
+}
+
+.back-footer {
+  background-color: rgb(0, 0, 0);
+  width: 97.3%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 20px;
+  top: 1050px;
+  color: #ffffff;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
